Revision history for {{$dist->name}}

{{$NEXT}}

4.101     2013-04-10T05:42:18Z

  [Test Fixes]
  - Fix unintentional failure to stringify dir arg to Git::Wrapper in tests
    to avoid test report failures with Git::Wrapper 0.028_96 dev release

4.100     2013-04-06T03:22:21Z

  - Add MintingProfile and use PluginBundle::Easy to generate mint files
  - Bump Pod::Weaver::Section::Support prereq to 1.005 and configure it
    to only link to metacpan (since that links to everything else).

4.000     2013-03-24T05:25:29Z

  - Use BundleInspector plugin to determine prereq info and generate
    "roughly equivalent" ini configs in pod.
  - Include plugin version requirements in plugin specs as ':version'
    instead of 'use' statements (and get rid of the use statements).
  - Revert to basic Readme in dist
  - Generate README.pod (instead of markdown) in repo root for github
    (ReadmeAnyFromPod instead of ReadmeMarkdownFromPod + CopyReadmeFromBuild)
  - Remove 'disable_tests' and 'skip_prereqs' in favor of role-based
    '-remove' and 'AutoPrereqs.skip'
  - Add Tests::ChangesHasContent, CheckMetaResources, CheckPrereqsIndexed
  - Collect contributors from git and list in meta and pod
  - Collect =class_method pod commands

3.203     2011-12-10T00:02:58Z

  - Consume PluginRemover role to get '-remove' magically

3.202     2011-11-19T18:25:57Z

  - Put 'Changes' back into @Git's allow_dirty
  - Reorder plugins so ConfirmRelease is last BeforeRelease

3.201     2011-11-18T04:20:13Z

  - Use ReadmeMarkdownFromPod and CopyReadmeFromBuild to automate
    a more useful github readme
  - Load @Git bundle earlier (before releaser)

3.200     2011-10-19T23:49:56Z

  - Move some logic out into Config::MVP::Slicer
    and consume Dist::Zilla::Role::PluginBundle::Config::Slicer
  - Update tests

3.108     2011-10-03T13:59:32Z

  [Prereqs]
  - Pod::Weaver::Plugin::Encoding
  - By default just use MakeMaker; set 'builder' to 'mb' or 'both'
    for ModuleBuild and/or DualBuilders